[package]
name = "wiretrap"
version = "0.1.0"
edition = "2021"
description = ""
authors = [""]
license = ""
readme = "README.md"
homepage = ""
repository = ""
keywords = ["", ""]
categories = [""]
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.64"
tokio-native-tls = "0.3.1"
tokio-openssl = "0.6.4"
tokio-util = "0.7.11"
tokio = { version = "1.37.0", features = ["full"] }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
